# MixER

./: .gitignore  README.md  pyproject.toml
examples/epilepsy/: main_mixer.py
examples/epilepsy/data/: Epilepsy2.txt  prepare_data.py
examples/glycolytic/: main_mixer.py
examples/lorentz/: main_mixer.py
examples/lotka-v/: main_mixer.py
examples/ode-bench/: main_mixer.py
examples/ode-bench/data/: adapt_test.npz  adapt_test_bounds.npy  adapt_test_envs.json  adapt_train.npz  adapt_train_bounds.npy  ode_definitions_2D.json  ode_generation.py  test.npz  test_bounds.npy  test_envs.json  train.npz  train_bounds.npy
examples/ode-bench/data_gen/: ode_definitions_1D.json  ode_definitions_2D.json  ode_definitions_3D.json  ode_definitions_4D.json  ode_generation.py
examples/selkov/: main_mixer.py
examples/synthetic-control/: main_mixer.py
mixer/: trainer.py  visualtester.py
