[project]
name = "mixer"
description = "Hierarchical Meta-Learning via Mixtures of Experts"
version = "0.0.1"
authors = [
    { name = "Anonymous", email = "anonymous" }
]
dependencies = [
    "jax >= 0.3.4",
    # "equinox >= 0.9.2",
    # "optax >= 0.1.1",
    # "flax",
    # "jraph",
    # "pyvis==0.3.1",
    # "pytest",
]

[project.optional-dependencies]
dev = [
    "seaborn",
    "pyvista[trame]"
]

[tool.setuptools]
py-modules = ["selfmod"]
